fixed caption alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -66,6 +66,7 @@ html, body {
 }
 
 .image-container figcaption {
+    height: 3em;
     margin-top: 5px;
     font-size: 3vw;
     font-weight: bold;
